atualização, serviços.refacture

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "nativewind": "^4.1.23",
     "typescript": "^5.3.3"
   }
 }
