--- a/app.json
+++ b/app.json
@@ -16,9 +16,9 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
-    "experiments": {
-      "typedRoutes": true
+    "android":{
+      "package":"com.project.yourappname"
     }
   }
 }
+
